Bug 243792 - Wireless cannot connect without KWallet
Summary: Wireless cannot connect without KWallet
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Wireless (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 205319 247044 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-06 20:49 UTC by tiddchristopher
Modified: 2011-03-17 07:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tiddchristopher 2010-07-06 20:49:33 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

When attempting to connect to wireless (with password, specifically WEP in my case) on a system without KWallet enabled, duplicate forms are displayed followed by the system not even attempting to connect.

Reproducible: Always

Steps to Reproduce:
I'm doing this from memory, so my button names, etc. might be slightly off.

1. Fresh system
2. Attempt to connect to wireless (with key) using any gui method in KDE
3. Notification appears asking if you would like to enable KWallet
-Select No
4. Form appears, this one asking for you to repeat the network information
-Simultaneously, the network toolbar item displays the connecting icon.
-When hovering over this icon, an alert says "Connecting" 
-When right-clicking this icon, an alert says "Awaiting authentication"
5. After filling out the repeated form and applying/closing it, the network toolbar icon goes back to disconnected state.

This process can be repeated indefinitely; the only step that changes is the KWallet notification, which does not appear after the first attempt.

Actual Results:  
System does not even attempt to connect.

Expected Results:  
System connects, but requires manually entering the key for each subsequent connection.

KWallet needs to make clear that is is REQUIRED, or the network manager should have an alternate authentication functionality.

To fix this problem, the user must enable KWallet.  (Really easy fix IF you realize what's going on.)

This is a very frustrating bug when you can't figure out why your connection information won't stick.
Comment 1 tiddchristopher 2010-07-06 21:09:15 UTC
A few corrections:

In step 3, it should say "Cancel" instead of "No".

In step 4, I reversed hover and right click; hovering yields "Awaiting authentication" and right-clicking gives "Connecting".  Note that it isn't actually attempting to connect at this point.
Comment 2 Lamarque V. Souza 2011-03-14 16:24:18 UTC
*** Bug 247044 has been marked as a duplicate of this bug. ***
Comment 3 Lamarque V. Souza 2011-03-14 17:20:16 UTC
Git commit 0e36382dffa9935d27f617354a1e03d8b958973b by Lamarque V. Souza.
Committed on 14/03/2011 at 17:17.
Pushed by lvsouza into branch 'master'.

Applying fix connecting to WiFi when "In file (unencrypted)" secrets
storage is used.
Thanks Jirka Klimes for sorting this out.

REVIEW: 100855
BUG: 243792

M  +5    -1    libs/internals/settings/802-1x.cpp     

http://commits.kde.org/networkmanagement/0e36382dffa9935d27f617354a1e03d8b958973b
Comment 4 Lamarque V. Souza 2011-03-17 07:03:43 UTC
*** Bug 205319 has been marked as a duplicate of this bug. ***