Applying fix connecting to WiFi when "In file (unencrypted)" secrets storage is used. Thanks Jirka Klimes for sorting this out.

REVIEW: 100855
BUG: 243792